##########################################################################
# If not stated otherwise in this file or this component's Licenses.txt
# file the following copyright and licenses apply:
#
# Copyright 2015 RDK Management
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
##########################################################################
SUBDIRS =  mocks_hal mocks_fd mocks_util mocks_sysevent mocks_syscfg mocks_socket mocks_psm \
           mocks_CcspCommonLibrary mocks_file_io mocks_SyscallWrapper mocks_unpriv mocks_rbus mocks_safec_lib \
           mocks_rdk_logger mocks_CcspMisc mocks_base64 mocks_parodus mocks_webconfigFramework mocks_cJSON \
           mocks_msgpack mocks_telemetry mocks_pthread mocks_mqhandler mocks_utopia mocks_scheduler \
           mocks_jansson mocks_nfqueue mocks_pcap mocks_resolv mocks_libev mocks_netsnmp \
           mocks_libxml mocks_rdkconfig mocks_coreNet_lib
